--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,11 @@
-// TODO
+.content {
+    height: 5rem;
+}
+
+.container{
+    
+    max-width: 1120px;
+    margin: 0 auto;
+    padding: 0 14rem;
+    display: flex;  
+}
