--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,37 @@
-// TODO
+.container {
+  margin-top: 0.5rem;
+}
+
+.imageBox {
+  img {
+    width: 100%;
+    max-height: 23rem;
+  }
+  margin-bottom: 1.5rem;
+}
+
+.author {
+  display: flex;
+  margin-top: 0.5rem;
+  time {
+    margin-left: 0.5rem;
+    margin-right: 1.5rem;
+  }
+
+  p {
+    margin-left: 0.5rem;
+    margin-right: 1rem;
+  }
+  span {
+    margin-left: 0.5rem;
+  }
+}
+
+.content {
+  max-width: 720px;
+  margin: 0 auto;
+}
+
+.containerHtml {
+  margin-top: 2rem;
+}
