--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,3 +5,37 @@
 }
 
 // TODO
+
+:root {
+  --highlight: #ff57b2;
+
+  --heading: #f8f8f8;
+  --background-travel: #1a1d23;
+  --info: #bbbbbb;
+  --body: #d7d7d7;
+}
+
+body {
+  background: var(--background-travel);
+  color: var(--heading);
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+body,
+input,
+select,
+textarea,
+button {
+  font: 400 1rem "Inter", sans-serif;
+}
